base/sonarqube.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube
  namespace: base
spec:
  serviceName: "sonarqube"
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      nodeSelector:
        node: base
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: sonarqube:lts
          securityContext:
            runAsUser: 1000
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "4G"
              cpu: "2.0"
            requests:
              memory: "1.5G"
              cpu: "1.0"
          volumeMounts:
            - name: data
              mountPath: /opt/sonarqube/data
            - name: plugins
              mountPath: /opt/sonarqube/extensions/plugins
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: plugins
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs
        resources:
          requests:
            storage: 2Gi

---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: base
spec:
  type: NodePort
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: base
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: tradein-alb
    alb.ingress.kubernetes.io/listen-ports: '{"HTTPS":443}'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - sonar.rogaikwad.online
      secretName: encrypt-tls
  rules:
    - host: sonar.rogaikwad.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
